# the-oracle

./: .gitignore  Makefile  README.md  create.sh  docker-compose.yaml
backend/: Dockerfile  pyproject.toml
backend/src/: chromautils.py  main.py  requirements.txt  setuputils.py
backend/src/the_oracle/: chroma.py  main.py  sync.py
backend/src/the_oracle/sources/: google_sheets.py  json_file.py
data/knowledge/: data.json
frontend/: Dockerfile
frontend/src/: package.json
frontend/src/src/layouts/: Layout.astro
frontend/src/src/pages/: index.astro
